src/objects/Zip_Code_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <picklist>
            <picklistValues>
                <fullName>Bayonne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brooklyn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buffalo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deer Park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Orange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elizabeth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elmsford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Englewood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hempstead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jackson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jersey City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Livingston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mamaroneck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mastic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Millburn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mount Vernon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New York</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paterson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Queens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secaucus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shelton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somerville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staten Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tarrytown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tenafly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tobyhanna</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OldId__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District Of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federated States Of Micronesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marshall Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Zip Code Mapping</label>
    <listViews>
        <fullName>Mapping_with_City_and_State</fullName>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <label>Mapping with City and State</label>
    </listViews>
    <nameField>
        <label>Zip Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zip Code Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>